subcommands/lsp/tree-sitter-catalyst/corpus/statements.txt
================================================================================
Return
================================================================================

fn main(a: usize) -> usize {
  return a + 1;
}

--------------------------------------------------------------------------------

(source_file
  (new_line)
  (fn
    (sig
      (name)
      (sig_args
        (sig_arg
          (pat
            (name))
          (type
            (path
              (path_seg
                (name))))))
      (type
        (path
          (path_seg
            (name)))))
    (block
      (new_line)
      (return
        (op
          (path
            (path_seg
              (name)))
          (int)))
      (new_line)))
  (new_line))

================================================================================
TypePath
================================================================================

fn something(a: Namespace\Type) -> builtin {
  return
}

--------------------------------------------------------------------------------

(source_file
  (new_line)
  (fn
    (sig
      (name)
      (sig_args
        (sig_arg
          (pat
            (name))
          (type
            (path
              (path_seg
                (name))
              (path_seg
                (name))))))
      (type
        (path
          (path_seg
            (name)))))
    (block
      (new_line)
      (return)
      (new_line)))
  (new_line))

================================================================================
Pattern
================================================================================

fn something(\{ a: \Some~f, b, .. }: namespace\Type) extern

--------------------------------------------------------------------------------

(source_file
  (new_line)
  (fn
    (sig
      (name)
      (sig_args
        (sig_arg
          (pat
            (struct_pat
              (name)
              (pat
                (enum_pat
                  (name)
                  (pat
                    (name))))
              (name)))
          (type
            (path
              (path_seg
                (name))
              (path_seg
                (name))))))))
  (new_line))
